--- a/index.html
+++ b/index.html
@@ -922,7 +922,7 @@
 
 		if (deltaX > 30 && currentIndex > 2) {
 			currentIndex--;
-		} else if (deltaX < -30 && currentIndex < items.length - 1) {
+		} else if (deltaX < -30 && currentIndex <= 5) {
 			currentIndex++;
 		}
 
